[gd_scene load_steps=9 format=2]

[ext_resource path="res://sounds/GameOver.wav" type="AudioStream" id=1]
[ext_resource path="res://Escenas/GameOver.gd" type="Script" id=2]
[ext_resource path="res://background/jardin/Gameover.jpg" type="Texture" id=3]
[ext_resource path="res://TIEWING.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://images/button-g3d09a2d31_640.png" type="Texture" id=5]
[ext_resource path="res://images/btn-moradito.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=3]
size = 40
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 80
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, -1 )
scale = Vector2( 0.171, 0.204 )
texture = ExtResource( 3 )
centered = false

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 199.0
margin_top = 381.0
margin_right = 518.0
margin_bottom = 519.0
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton2" type="TextureButton" parent="."]
margin_left = 587.0
margin_top = 404.0
margin_right = 900.0
margin_bottom = 482.0
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 220.0
margin_top = 424.0
margin_right = 500.0
margin_bottom = 476.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonIniciar" type="Button" parent="VBoxContainer"]
margin_right = 280.0
margin_bottom = 52.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Volver a iniciar"
flat = true

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 604.0
margin_top = 420.0
margin_right = 884.0
margin_bottom = 472.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonMenu" type="Button" parent="VBoxContainer2"]
margin_right = 280.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 3 )
text = "Volver al menu"
flat = true

[node name="Label" type="Label" parent="."]
margin_left = 359.0
margin_top = 133.0
margin_right = 706.0
margin_bottom = 412.0
custom_colors/font_color = Color( 1, 0.0313726, 0.0313726, 1 )
custom_fonts/font = SubResource( 2 )
text = "Game 
Over
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/BotonIniciar" to="." method="_on_BotonIniciar_pressed"]
[connection signal="pressed" from="VBoxContainer2/BotonMenu" to="." method="_on_BotonMenu_pressed"]
